plugins {
    id 'com.gradleup.shadow' version '8.3.6'
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:all,-this-escape,-serial'
}

java {
    sourceCompatibility = '25'
    targetCompatibility = '25'
}

application {
    mainClass = 'com.mollin.loto.Loto'
}

javafx {
    version = "25"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.controlsfx', name: 'controlsfx', version: '11.2.0'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
    implementation group: 'org.javatuples', name: 'javatuples', version: '1.2'
    implementation group: 'org.zeroturnaround', name: 'zt-zip', version: '1.17'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.12'
    implementation group: 'org.slf4j', name: 'slf4j-nop', version: '2.0.12'
    
    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.25.3'
}

jar {
    manifest {
        attributes(
            'Main-Class': 'com.mollin.loto.Loto'
        )
    }
}

// Workaround for Gradle 9 with com.gradleup.shadow 8.3.6
ext {
    mainClassName = 'com.mollin.loto.Loto'
}
